# ChemPlasKin

./: .gitignore  CMakeLists.txt  README.md
examples/: NEW_EXAMPLE_GUIDELINE.md
examples/Air/: testAir.cpp
examples/DBD_H2O2/: chemPlasProperties  controlDict  h2o2_plasma.yaml
examples/H2O2He/: chemPlasProperties  controlDict  plot.py
examples/N2/: plasmaReactor.h  testN2.cpp
examples/N2Transport/: CMakeLists.txt  plasmaN2_transport.yaml  plot.py  testN2.cpp
include/kinetics/: Boltzmann.h
src/: master.cpp  plasmaReactor.h  utilities.h
src/kinetics/: Boltzmann.cpp
